# EzExampleCmake

./: README.txt
EzExampleCmakeExecute/: CMakeLists.txt  CMakeLists.txt-01GlobeInterface.cmake  CMakeLists.txt-02Gtest.cmake  CMakeLists.txt-Gtest.cmake
EzExampleCmakeExecute/cxx_src/: _main.cxx  melon_feature.cxx
EzExampleCmakeExecute/cxx_xxx_gtest/: Example01.cxx  _head_global_include_for_test.h
EzExampleCmakeLibrary/: CMakeLists.txt  CMakeLists.txt-02Gtest.cmake  CMakeLists.txt-Gtest.cmake
EzExampleCmakeLibrary/Launcher/: 0_build_compile.sh
EzExampleCmakeLibrary/cxx_include/: _head.h
EzExampleCmakeLibrary/cxx_src/: _head.cxx  melon_feature.cxx
EzExampleCmakeLibrary/cxx_xxx_gtest/: _main.cxx
EzExampleCmakePackage/: CMakeLists.txt  CMakeLists.txt+01GlobeInterface.cmake  CMakeLists.txt-01GlobeInterface.cmake  CMakeLists.txt-02Gtest.cmake  CMakeLists.txt-Gtest.cmake
EzExampleCmakePackage/sub_exec-CxxExecute/: CMakeLists.txt
EzExampleCmakePackage/sub_exec-CxxExecute/cxx_include/: melon_feature.h
EzExampleCmakePackage/sub_exec-CxxExecute/cxx_src/: _main.cxx
EzExampleCmakePackage/sub_libx-CxxLibrary/: CMakeLists.txt
EzExampleCmakePackage/sub_libx-CxxLibrary/cxx_include/: melon_feature_02.h
EzExampleCmakePackage/sub_libx-CxxLibrary/cxx_src/: melon_feature_02.cxx
EzExampleCmakePackage/sub_test-Gtest/: CMakeLists.txt  CMakeLists.txt+TESTLIB.cmake
EzExampleCmakePackage/sub_test-Gtest/cxx_xxx_gtest/: Example01.cxx
